# speech-to-prompt

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  dev.py  pyproject.toml  run.py  test_install.py
src/speech_to_prompt/: main.py
